main/default/objects/Integra_Contract__c/fields/Renewal_Interval__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Interval__c</fullName>
    <inlineHelpText>Input the total duration of renewals if every renewal is used (in months).</inlineHelpText>
    <label>Renewal Interval</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>