main/default/objects/Integra_Contract__c/fields/Required_Action__c.field-meta.xml
<CustomField>
    <fullName>Required_Action__c</fullName>
    <inlineHelpText>If you selected yes to &quot;Integra Assignment Prohibited&quot; then what action, if any, needs to be taken when an assignment is triggered or with respect to those exceptions?</inlineHelpText>
    <label>Required Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Consent – Prior Written – Cannot be reasonably withheld</fullName>
            </value>
            <value>
                <fullName>Consent – Prior Written – No reasonable language</fullName>
            </value>
            <value>
                <fullName>No Action Required</fullName>
            </value>
            <value>
                <fullName>Notice Only</fullName>
            </value>
            <value>
                <fullName>Notice – Prior</fullName>
            </value>
            <value>
                <fullName>Other Action Required - See Notes</fullName>
            </value>
            <value>
                <fullName>Notice Only Within 30 days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>