main/default/objects/Integra_Contract__c/fields/Responsible_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Attorney__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to ID Responsible Attorney. Includes lookup filter to active users with a title of Attorney.</description>
    <inlineHelpText>Enter the name of the Responsible Attorney and click on the magnifying glass to find the correct User.</inlineHelpText>
    <label>Responsible Attorney</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Attorney_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>