main/default/objects/Integra_Contract__c/fields/Revenue_Commitment_Language__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Commitment_Language__c</fullName>
    <label>Revenue Commitment Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>