main/default/objects/Integra_Contract__c/fields/Scope_of_PSA__c.field-meta.xml
<CustomField>
    <fullName>Scope_of_PSA__c</fullName>
    <description>To hold data from Zayo SFDC</description>
    <label>Scope of PSA</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Splicing</fullName>
            </value>
            <value>
                <fullName>Duct Verification</fullName>
            </value>
            <value>
                <fullName>Manhole Verification</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>zColo</fullName>
            </value>
            <value>
                <fullName>ISP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>