main/default/objects/Integra_Contract__c/fields/Tax_Imposition_Pass_Through__c.field-meta.xml
<CustomField>
    <fullName>Tax_Imposition_Pass_Through__c</fullName>
    <label>Tax/Imposition Pass Through</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>