main/default/objects/Integra_Contract__c/fields/Term_Type__c.field-meta.xml
<CustomField>
    <fullName>Term_Type__c</fullName>
    <label>Term Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Main_or_Related_Contract__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Auto-Renew</fullName>
            </value>
            <value>
                <fullName>Coterminous</fullName>
            </value>
            <value>
                <fullName>Evergreen</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Fixed with a Renewal Option</fullName>
            </value>
            <value>
                <fullName>Perpetual</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>