main/default/objects/Integra_Contract__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>