main/default/objects/Integra_Contract__c/validationRules/Active_Agency_Contract_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Agency_Contract_Fields</fullName>
    <active>true</active>
    <description>If Status = Active, &quot;Commissionable Billing Base,&quot; &quot;Ave Mo MRC; 6 month rolling,&quot; &quot;Change from Q4 Average Commissionable Base,&quot; and &quot;MRC YTD Total&quot;</description>
    <errorConditionFormula>(RecordType.Name == &quot;Agency&quot; &amp;&amp;
 ISPICKVAL(Status__c, &quot;Active&quot;)) &amp;&amp;
(ISBLANK( Commissionable_Billing_Base__c ) ||
ISBLANK( Ave_Mo_MRC_6_month_rolling__c ) ||
ISBLANK ( Change_from_Q4_Average_Commissionable_Ba__c ) ||
ISBLANK ( MRC_YTD_Total__c )
)</errorConditionFormula>
    <errorMessage>Enter &quot;Commissionable Billing Base,&quot; &quot;Ave Mo MRC; 6 month rolling,&quot; &quot;Change from Q4 Average Commissionable Base,&quot; and &quot;MRC YTD Total&quot;. All are required for &quot;Active&quot; contracts.</errorMessage>
</ValidationRule>