main/default/objects/Integra_Contract__c/validationRules/Billing_Detail_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Detail_Required</fullName>
    <active>true</active>
    <description>Billing Detail required when Billing impacting exceptions are selected</description>
    <errorConditionFormula>INCLUDES(Custom_Contract_Category__c, &quot;Billing - Non-Standard Billing Terms&quot;)&amp;&amp; 
ISBLANK( Billing_Detail__c )</errorConditionFormula>
    <errorDisplayField>Billing_Detail__c</errorDisplayField>
    <errorMessage>Please enter detail from redlined contract</errorMessage>
</ValidationRule>