main/default/objects/Integra_Contract__c/validationRules/Notice_Period_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Notice_Period_Blank</fullName>
    <active>true</active>
    <description>Should be blank if Term Type is something other than &quot;Fixed with Renewal Option&quot; or &quot;Auto-Renewal&quot;</description>
    <errorConditionFormula>AND ( 
TEXT( Term_Type__c) &lt;&gt; &quot;Fixed with a Renewal Option&quot;, 
TEXT (Term_Type__c) &lt;&gt; &quot;Auto-Renew&quot;,
NOT(ISBLANK (Notice_Period_days__c)) 
)</errorConditionFormula>
    <errorDisplayField>Notice_Period_days__c</errorDisplayField>
    <errorMessage>Please clear the &quot;Notice Period (days)&quot; field.</errorMessage>
</ValidationRule>