main/default/objects/Integra_Contract__c/validationRules/Original_Term_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Original_Term_Required</fullName>
    <active>true</active>
    <description>&quot;Original Term (months)&quot; is required as long as the &quot;Term Type&quot; is not &quot;Perpetual.&quot;</description>
    <errorConditionFormula>AND ( 
OR ( 
TEXT( Term_Type__c) == &quot;Fixed with a Renewal Option&quot;, 
TEXT (Term_Type__c) == &quot;Auto-Renew&quot;, 
TEXT (Term_Type__c) == &quot;Fixed&quot;), 
ISBLANK (Original_Term__c) 
)</errorConditionFormula>
    <errorDisplayField>Original_Term__c</errorDisplayField>
    <errorMessage>Please enter the Original Term in months</errorMessage>
</ValidationRule>