main/default/objects/Integra_Contract__c/validationRules/Renewal_Interval_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Renewal_Interval_Blank</fullName>
    <active>true</active>
    <description>Should be blank if Term Type is something other than &quot;Fixed with Renewal Option&quot; or &quot;Auto-Renewal&quot;</description>
    <errorConditionFormula>AND ( 
TEXT( Term_Type__c) &lt;&gt; &quot;Fixed with a Renewal Option&quot;, 
TEXT (Term_Type__c) &lt;&gt; &quot;Auto-Renew&quot;, 
NOT(ISBLANK (Renewal_Interval__c)) 
)</errorConditionFormula>
    <errorDisplayField>Renewal_Interval__c</errorDisplayField>
    <errorMessage>Please clear the &quot;Renewal Interval&quot; field.</errorMessage>
</ValidationRule>