main/default/objects/Integra_Contract__c/validationRules/Service_Delivery_Detail_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Delivery_Detail_Required</fullName>
    <active>true</active>
    <description>Service Delivery Detail required when Service Delivery impacting exceptions are selected</description>
    <errorConditionFormula>AND( 
OR( 
INCLUDES(Custom_Contract_Category__c, &quot;SD - Non-Standard Reporting&quot;), INCLUDES(Custom_Contract_Category__c, &quot;SD - Non-Standard Intervals&quot;),INCLUDES(Custom_Contract_Category__c, &quot;SD - Non-Standard Test &amp; Acceptance&quot;) 
) 
,ISBLANK( Service_Delivery_Detail__c ) 
)</errorConditionFormula>
    <errorDisplayField>Service_Delivery_Detail__c</errorDisplayField>
    <errorMessage>Please enter detail from redlined contract</errorMessage>
</ValidationRule>