main/default/objects/Integra_Contract__c/validationRules/SLA_Notes_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>SLA_Notes_Required</fullName>
    <active>true</active>
    <description>If &quot;SLA&quot; field is set to &quot;Yes&quot; then Notes are required.</description>
    <errorConditionFormula>AND (
TEXT(SLA__c) == &quot;Yes&quot;,
ISBLANK (SLA_Notes__c)
)</errorConditionFormula>
    <errorDisplayField>SLA_Notes__c</errorDisplayField>
    <errorMessage>Please provide the Section Number and any notes applicable to SLA.</errorMessage>
</ValidationRule>