main/default/objects/Integra_Contract__c/listViews/Non_Customer_1.listView-meta.xml
<ListView>
    <fullName>Non_Customer_1</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Type__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>Contract_Subcategory__c</columns>
    <columns>Description__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Title__c</columns>
    <columns>CLLI__c</columns>
    <columns>Status__c</columns>
    <columns>Effective_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Non Customer_1</label>
</ListView>